2005-12-22 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditPlace.py: changed display_references to use find_backlink_handles
	* src/EditRepository.py: modified to use  find_backlink_handles and fixed subtle bug
	* src/RelLib/_Source.py: added reporef_list to referent object lists so that backref 
	are put in reference_map
	* test/GrampsDb/GrampsDbBase_Test.py: added unittest for source/reference backlinks
	* test/GrampsDb/GrampsDbTestBase.py: added unittest for source/reference backlinks
	
2005-12-21  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: remove print statements
	* src/ViewManger.py: Fix const.app_* 
	* src/Bookmark.py: start of reimplementation
	* src/PersonView.py: commit fixes
	* src/GrampsDb/_GrampsBSDDB.py: refactor remove and id function

2005-12-21  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayState.py (remove_item): Add code to adjust other
	item's tracks after deleting an item; (move_item_down):
	Recursively walk the items under a given item and lower the track
	entry.

	* src/DisplayState.py: Factor out recursive action function.
	* src/EditPerson.py: Use person handle to identify the window.
	* src/EventEdit.py: Use more descriptive menu label.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Convert witness
	privacy flag and comment to the privacy flag and note of the new
	EventRef for old witness_by_ID references.

	* src/GrampsDb/Makefile.am, src/GrampsDb/.cvsignore: Add to CVS.
	* configure.in: Create Makefile in new directory.

	* src/GrampsDb/_GrampsBSDDB.py (close): close reference_map tables.
	* src/ViewManager.py (quit): Add function to properly quit.

	* src/DisplayState.py: Work out parent_window, correct close method.
	* src/EventEdit.py: Use parent_window; get rid of parent; remove
	unused code.
	
2005-12-21 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditSource.py: fixed small mistake in display_references

2005-12-21 Richard Taylor <rjt-gramps@thegrindstone.me.uk>