@@ -166,8 +166,8 @@ class MediaView(PageView.ListView):
         
         obj = self.dbstate.db.get_object_from_handle(handle)
         if obj.get_mime_type():
-            ImageSelect.GlobalMediaProperties(self.dbstate.db,
-                                              obj,self,self.topWindow)
+            ImageSelect.GlobalMediaProperties(self.dbstate,self.uistate, [],
+                                              obj)
         else:
             import NoteEdit
             NoteEdit.NoteEditor(obj,self.parent,self.topWindow,
